--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,8 @@
 .classpath
 .settings*
 /bin/
+/targetFile.wav
+/targetFile_2022-05-15 094453.wav
+/targetFile_2022-05-15 094513.wav
+/targetFile_2022-05-15 0946
+/targetFile_2022-05-15 0947
